--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
           id="price1"
           placeholder="Ціна товару 1"
           value="2.8"
+          step="0.1"
           required
         />
 
@@ -81,6 +82,7 @@
           id="price2"
           placeholder="Ціна товару 2"
           value="2.8"
+          step="0.1"
           required
         />
         <div class="result2">
@@ -103,6 +105,7 @@
           id="price3"
           placeholder="Ціна товару 3"
           value="1.5"
+          step="0.05"
           required
         />
         <div class="result3">
@@ -125,6 +128,7 @@
           id="price4"
           placeholder="Ціна товару 4"
           value="1.5"
+          step="0.05"
           required
         />
         <div class="result4">
@@ -147,6 +151,7 @@
           id="price5"
           placeholder="Ціна товару 5"
           value="0.25"
+          step="0.05"
           required
         />
         <div class="result5">
@@ -169,6 +174,7 @@
           id="price6"
           placeholder="Ціна товару 6"
           value="0.25"
+          step="0.05"
           required
         />
         <div class="result6">
